--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "autoprefixer": "^10.4.13",
+    "gatsby-plugin-postcss": "^6.1.0",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.8.4"
   }
 }
