--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   },
   "dependencies": {
     "gatsby": "^5.0.0",
+    "gatsby-omni-font-loader": "^2.0.2",
     "gatsby-plugin-image": "^3.1.0",
     "gatsby-plugin-sharp": "^5.1.0",
     "gatsby-source-contentful": "^8.1.0",
     "gatsby-transformer-sharp": "^5.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
